# rust-bbs

./: Cargo.toml
migrations/2020-05-27-024758_create_boards_table/: down.sql  up.sql
migrations/2020-05-27-025318_create_threads_table/: down.sql  up.sql
migrations/2020-05-27-031337_create_posts_table/: up.sql
src/: main.rs
src/app/: Cargo.toml
src/app/src/: lib.rs  views.rs
src/command/: Cargo.toml
src/command/src/: main.rs
src/database/: Cargo.toml
src/database/src/: connection.rs  models.rs  schema.rs
