[package]
name = "rust-bbs"
version = "0.1.0"
authors = ["rinsuki <428rinsuki+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.9.0"
async-std = { version = "1.6.0", features = ["attributes"] }