[package]
name = "app"
version = "0.1.0"
authors = ["rinsuki <428rinsuki+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.9.0"
horrorshow = "0.8.3"
mime = "0.3.16"
diesel = { version = "1.4.4", features = ["postgres"] }

database = { path="../database" }