[package]
name = "command"
version = "0.1.0"
authors = ["rinsuki <428rinsuki+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }

app = { package = "app", path = "../app" }